--- a/index.html
+++ b/index.html
@@ -7,4 +7,6 @@
 
 <body>
     <h1>Bienvenue sur mon GitHub !</h1>
+    <h2>Voici mon CV</h2>
+    <a href="C:\Users\maxim\Downloads\CV-Maxime-Paquotte (2).pdf"></a>
 </body>
