--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Bienvenue sur mon GitHub !</h1>
     <h2>Voici mon CV</h2>
-    <a href="C:\Users\maxim\Downloads\CV-Maxime-Paquotte (2).pdf"></a>
+    <iframe src="C:\Users\maxim\Downloads\CV-Maxime-Paquotte (2).pdf"  width="800px" height="600px"></iframe>
 </body>
+</html>
