--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Bienvenue sur mon GitHub !</h1>
     <h2>Voici mon CV</h2>
-    <iframe src="C:\wamp64\www\CoursGit2\CV-Maxime-Paquotte (2).pdf"  width="800px" height="900px"></iframe>
+    <iframe src="CV-Maxime-Paquotte (2).pdf"  width="800px" height="900px"></iframe>
 </body>
 </html>
